objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HELMS Support</fullName>
        <description>HELMS Support Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Record_Type_TXT__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Switch_Status__c</fullName>
        <label>Selected CRM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                    <label>Step 1-New Request</label>
                </value>
                <value>
                    <fullName>Pending CRM Verification</fullName>
                    <label>Step 2-Pending CRM Verification</label>
                </value>
                <value>
                    <fullName>CRM Vendor Confirmed</fullName>
                    <label>Step 3-CRM Vendor Confirmed</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Step 4-Approved</label>
                </value>
                <value>
                    <fullName>Test Lead Routed Successfully</fullName>
                    <label>Step 5-Test Lead Routed Successfully</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_switch_Start_Date__c</fullName>
        <description>Start/Effective Date for CRM switch</description>
        <label>Lead Receiving Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Comment_History__c</fullName>
        <label>Case Comment History</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: HPS-161
Description: Used to store the resolution on the case
Source System: Will be updated by the support team
Integration: NA.
Data Transformation: N/A.
Functional Definition: This will be used to inform Users about the solution to the case</description>
        <label>Case Resolution</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Update__c</fullName>
        <inlineHelpText>Enter the latest update here.</inlineHelpText>
        <label>Case Comment</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Helms_CRM_Eligible_FLG__c</fullName>
        <formula>Contact.HelmsCRMEligible_FLAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Helms CRM Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_User_Division__c</fullName>
        <formula>TEXT( CreatedBy.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by User Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CRM_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current CRM System</label>
        <referenceTo>CRM_System__c</referenceTo>
        <relationshipLabel>Cases (Current CRM System)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_CRM_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the certified CRM System</inlineHelpText>
        <label>New CRM System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Division__c</field>
                <operation>equals</operation>
                <valueField>CRM_System__c.Division_CD__c</valueField>
            </filterItems>
            <filterItems>
                <field>CRM_System__c.ISActive_FLG__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_System__c</referenceTo>
        <relationshipLabel>Cases new crm</relationshipLabel>
        <relationshipName>Casesnewcrm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_CRM_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New CRM Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.IsActive_CD__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (New CRM Vendor)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>$Label.Note</defaultValue>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_TXT__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer_Account_TXT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement__c</fullName>
        <label>Service Level Agreement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Preferred_Dealer_Account_TXT__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Resolution__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>All Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HELMS_Tier_1_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>HELMS Tier 1 Support</label>
        <queue>HELMS_Tier_1_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HELMS_Tier_2_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>HELMS Tier 2 Support</label>
        <queue>HELMS_Tier_2_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marine_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Marine Case Queue</label>
        <queue>Marine_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>My Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HELMS_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HELMS_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_CRM_Vendor_List_view</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>New CRM Vendor</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>New CRM Vendor List</label>
    </listViews>
    <listViews>
        <fullName>New_Dealer_List_view</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Not getting Leads</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>notEqual</operation>
            <value>New CRM Vendor</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.HELMS_Dealer_Support</value>
        </filters>
        <label>New Dealer List</label>
    </listViews>
    <listViews>
        <fullName>Powersports_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Powersports Case Queue</label>
        <queue>Powersports_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>HELMS_Dealer_Support</fullName>
        <active>true</active>
        <businessProcess>HELMS Support</businessProcess>
        <label>HELMS Dealer Support</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_Type_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>(OR(TEXT( Type ) = &apos;CRM Switch&apos;,TEXT( Type ) = &apos;New Dealer CRM&apos;) &amp;&amp; (ISBLANK( New_CRM_System__c ) ) )</errorConditionFormula>
        <errorDisplayField>New_CRM_System__c</errorDisplayField>
        <errorMessage>Please provide the New CRM System for CRM switch request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Receiving_Date_Should_Not_Be_Empty</fullName>
        <active>true</active>
        <description>Lead Receiving Date should not be empty.</description>
        <errorConditionFormula>(OR(TEXT( Type ) = &apos;CRM Switch&apos;,TEXT( Type ) = &apos;New Dealer CRM&apos;) &amp;&amp; (ISBLANK( CRM_switch_Start_Date__c ) ) ) &amp;&amp; $Setup.BypassAutomations__c.BypassValidationRule__c =False</errorConditionFormula>
        <errorDisplayField>CRM_switch_Start_Date__c</errorDisplayField>
        <errorMessage>Please select the Lead Receiving Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Other_Division_for_CRM_Switch</fullName>
        <active>true</active>
        <errorConditionFormula>(CONTAINS(Text(Division__c),&apos;A&apos;) &amp;&amp; NOT(CONTAINS(Account.Active_Divisions__c, &apos;A&apos;)))||
(CONTAINS(Text(Division__c),&apos;B&apos;) &amp;&amp;  NOT(CONTAINS(Account.Active_Divisions__c, &apos;B&apos;))) ||
(CONTAINS(Text(Division__c),&apos;M&apos;) &amp;&amp; NOT(CONTAINS(Account.Active_Divisions__c, &apos;M&apos;))) ||
(CONTAINS(Text(Division__c),&apos;P&apos;) &amp;&amp; NOT(CONTAINS(Account.Active_Divisions__c, &apos;P&apos;)))</errorConditionFormula>
        <errorDisplayField>Division__c</errorDisplayField>
        <errorMessage>Please Select Relevant Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Selected_CRM_Status_Change_1</fullName>
        <active>true</active>
        <description>Step 5 can be selected only after step 4- Approved. The user should not be able to select Step 5 directly</description>
        <errorConditionFormula>OR(
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;CRM Vendor Confirmed&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Test Lead Routed Successfully&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Pending CRM Verification&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Test Lead Routed Successfully&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;New Request&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Test Lead Routed Successfully&quot;))
)</errorConditionFormula>
        <errorDisplayField>CRM_Switch_Status__c</errorDisplayField>
        <errorMessage>Selected CRM Status should be approved first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Selected_CRM_Status_Change_2</fullName>
        <active>true</active>
        <description>CRM status can not be none.</description>
        <errorConditionFormula>OR(
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Test Lead Routed Successfully&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Approved&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Test Lead Routed Successfully&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;CRM Vendor Confirmed&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Test Lead Routed Successfully&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Pending CRM Verification&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Test Lead Routed Successfully&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;New Request&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Approved&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;CRM Vendor Confirmed&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Approved&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Pending CRM Verification&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Approved&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;New Request&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;CRM Vendor Confirmed&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Pending CRM Verification&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;CRM Vendor Confirmed&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;New Request&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Pending CRM Verification&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;New Request&quot;))
)</errorConditionFormula>
        <errorDisplayField>CRM_Switch_Status__c</errorDisplayField>
        <errorMessage>Steps can not be reverted back.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Selected_CRM_Status_Change_3</fullName>
        <active>true</active>
        <description>Please apply for new Request</description>
        <errorConditionFormula>OR(
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Pending CRM Verification&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;CRM Vendor Confirmed&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Approved&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;Test Lead Routed Successfully&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;New Request&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Pending CRM Verification&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;CRM Vendor Confirmed&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Approved&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;&quot;)),
AND(
ISPICKVAL( PRIORVALUE ( CRM_Switch_Status__c), &quot;Test Lead Routed Successfully&quot;),
ISPICKVAL(CRM_Switch_Status__c, &quot;&quot;))
)</errorConditionFormula>
        <errorDisplayField>CRM_Switch_Status__c</errorDisplayField>
        <errorMessage>Please select a CRM status.</errorMessage>
    </validationRules>
</CustomObject>